--- a/chat-room/package.json
+++ b/chat-room/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "@tailwindcss/vite": "^4.1.2",
     "firebase": "^11.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
     "react-redux": "^9.2.0",
-    "sass": "^1.86.3"
+    "react-router-dom": "^7.4.1",
+    "sass": "^1.86.3",
+    "tailwindcss": "^4.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
