--- a/chat-room/package.json
+++ b/chat-room/package.json
@@ -17,6 +17,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.1.2",
+    "@tanstack/react-query": "^5.72.0",
+    "axios": "^1.8.4",
     "firebase": "^11.6.0",
     "framer-motion": "^12.6.3",
     "react": "^19.0.0",
