--- a/chat-room/package.json
+++ b/chat-room/package.json
@@ -19,6 +19,8 @@
     "@tailwindcss/vite": "^4.1.2",
     "@tanstack/react-query": "^5.72.0",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "firebase": "^11.6.0",
     "framer-motion": "^12.6.3",
     "react": "^19.0.0",
